Finish basic gameplay flow

--- a/metrics.ini
+++ b/metrics.ini
@@ -4,7 +4,6 @@ FallbackTheme=_fallback
 [ArrowEffects]
 ArrowSpacing=60
 
-
 [NoteField]
 RoutineNoteSkinP1="delta-routine-p1"
 RoutineNoteSkinP2="delta-routine-p2"
@@ -16,17 +15,17 @@ AutoSetStyle=true
 DefaultModifiers="m500"
 
 [Player]
-ComboTransformCommand=y,144/4-16
+ComboTransformCommand=y,170/4-16
 DrawDistanceAfterTargetsPixels=-128
 DrawDistanceBeforeTargetsPixels=SCREEN_HEIGHT
-JudgmentTransformCommand=y,144/4-16
-ReceptorArrowsYReverse=-144
-ReceptorArrowsYStandard=-144
+JudgmentTransformCommand=y,170/4-16
+ReceptorArrowsYReverse=170
+ReceptorArrowsYStandard=-170
 ReceptorNoSinkScoreCutoff=4
 
 [PlayerShared]
-JudgmentTransformCommand=y,144/4-16
-ComboTransformCommand=y,144/4-16
+JudgmentTransformCommand=y,170/4-48
+ComboTransformCommand=y,170/4-16
 
 [Combo]
 ShowComboAt=4
@@ -38,7 +37,6 @@ SetNormalCommand=
 SetChangeCommand=
 SetRandomCommand=
 SetExtraCommand=
-# Determines if it shows both bpms ( 000-100 ) or cycles between the min and max.
 Cycle=false
 NoBpmText="000"
 # How fast it cycles, smaller is faster
@@ -53,7 +51,7 @@ FormatString="%03.0f"
 
 [ScreenTitleMenu]
 ChoiceNames="GameStart,Edit,GameSelect,Options,Exit"
-ChoiceGameStart="applydefaultoptions,playmode,regular;text,Play Game;screen,ScreenProfileLoad";
+ChoiceGameStart="applydefaultoptions;text,Play Game;screen,ScreenProfileLoad";
 ChoiceEdit="text,Edit Songs;screen,ScreenEditMenu"
 ChoiceGameSelect="screen,ScreenSelectGame;text,Select Game"
 ChoiceOptions="screen,ScreenOptionsService;text,Options"
@@ -65,7 +63,8 @@ Class="ScreenSelectMaster"
 Fallback="ScreenSelectMaster"
 AllowOperatorMenuButton=true
 AllowRepeatingInput=false
-AllowDisabledPlayerInput=false
+AllowDisabledPlayerInput=true
+AllowLateJoin=false
 
 ChoiceNames="1,2,3,4"
 Choice1="name,TopLeft;"
@@ -100,6 +99,7 @@ RepeatRate=16
 
 [ScreenSelectMusicCustom]
 Fallback="ScreenCustomMenu"
+NextScreen="ScreenGameplay"
 
 [ScreenEvaluationCustom]
 Fallback="ScreenCustomMenu"
@@ -117,7 +117,7 @@ PrevScreen="ScreenTitleMenu"
 
 [ScreenGameplay]
 NextScreen="ScreenEvaluation"
-PrevScreen="ScreenSelectMusic"
+PrevScreen="ScreenSelectMusicCustom"
 MinSecondsToStep=2
 MinSecondsToMusic=2
 LifeP1OnCommand=visible,false
@@ -130,12 +130,21 @@ UnpauseWithStart=false
 TextFormat="%04.0f"
 ApproachSeconds=0.333333
 Commify=false
-LeadingZeroMultiplyColor=color("#FFFFFF44")
+LeadingZeroMultiplyColor=color("#66666688")
 
 [ScreenSystemLayer]
 ShowCreditDisplay=false
 CreditsJoinOnly=true
 CreditsP1OnCommand=visible,false
 CreditsP2OnCommand=visible,false
-# CreditsP1Y=SCREEN_BOTTOM-9999
-# CreditsP2Y=SCREEN_BOTTOM-9999
+
+[ScreenOptionsMaster]
+Speed="7;"
+SpeedDefault="mod,1x,no randomspeed"
+Speed,1="mod,m500;text,m500"
+Speed,2="mod,m550;text,m550"
+Speed,3="mod,m600;text,m600"
+Speed,4="mod,m650;text,m650"
+Speed,5="mod,m700;text,m700"
+Speed,6="mod,m750;text,m750"
+Speed,7="mod,m800;text,m800"
