Add Player combo

--- a/metrics.ini
+++ b/metrics.ini
@@ -15,17 +15,17 @@ AutoSetStyle=true
 DefaultModifiers="m500"
 
 [Player]
-ComboTransformCommand=y,170/4-16
+ComboTransformCommand=y,(170/4)-32
 DrawDistanceAfterTargetsPixels=-128
 DrawDistanceBeforeTargetsPixels=SCREEN_HEIGHT
-JudgmentTransformCommand=y,170/4-16
+JudgmentTransformCommand=y,(170/4)-32
 ReceptorArrowsYReverse=170
 ReceptorArrowsYStandard=-170
 ReceptorNoSinkScoreCutoff=4
 
 [PlayerShared]
-JudgmentTransformCommand=y,170/4-48
-ComboTransformCommand=y,170/4-16
+JudgmentTransformCommand=y,(170/4)-32
+ComboTransformCommand=y,(170/4)-32
 
 [Combo]
 ShowComboAt=4
@@ -125,6 +125,9 @@ LifeP2OnCommand=visible,false
 ScoreP1OnCommand=visible,false
 ScoreP2OnCommand=visible,false
 UnpauseWithStart=false
+
+[ScreenSyncOverlay]
+StatusOnCommand=zoom,0.75;x,SCREEN_CENTER_X;y,SCREEN_BOTTOM-16;vertalign,bottom
 
 [RollingNumbersRadar]
 TextFormat="%04.0f"
