Refactor the custom input system from menu messages to input callback

--- a/metrics.ini
+++ b/metrics.ini
@@ -78,15 +78,10 @@ OptionOrderDown="1:3,3:1,2:4,4:2"
 OptionOrderLeft="1:2,2:1,3:4,4:3"
 OptionOrderRight="1:2,2:1,3:4,4:3"
 
-CodeNames="Options,PressSelect,ReleaseSelect,Start,Return,Back,Center,Sort"
-CodeOptions=GameCode("Options")
-CodeSort=GameCode("Sort")
-CodePressSelect="Select"
-CodeReleaseSelect="~Select"
-CodeStart="Start"
-CodeReturn="Back"
-CodeBack="~Back"
-CodeCenter="Center"
+CodeNames="OptionsNormal,OptionsMenu,OptionsPump"
+CodeOptionsNormal=GameCode("OptionsNormal")
+CodeOptionsMenu=GameCode("OptionsMenu")
+CodeOptionsPump=GameCode("OptionsPump")
 
 HandleBackButton=false
 SharedSelection=true
