Implement input to return to the grid's first item

--- a/metrics.ini
+++ b/metrics.ini
@@ -78,10 +78,11 @@ OptionOrderDown="1:3,3:1,2:4,4:2"
 OptionOrderLeft="1:2,2:1,3:4,4:3"
 OptionOrderRight="1:2,2:1,3:4,4:3"
 
-CodeNames="OptionsNormal,OptionsMenu,OptionsPump"
-CodeOptionsNormal=GameCode("OptionsNormal")
-CodeOptionsMenu=GameCode("OptionsMenu")
-CodeOptionsPump=GameCode("OptionsPump")
+CodeNames="Sort1,Sort2,Options1,Options2"
+CodeOptions1=GameCode("Options1")
+CodeOptions2=GameCode("Options2")
+CodeSort1=GameCode("Sort1")
+CodeSort2=GameCode("Sort2")
 
 HandleBackButton=false
 SharedSelection=true
