Implement Search functionality

--- a/metrics.ini
+++ b/metrics.ini
@@ -147,3 +147,10 @@ Speed,4="mod,m650;text,m650"
 Speed,5="mod,m700;text,m700"
 Speed,6="mod,m750;text,m750"
 Speed,7="mod,m800;text,m800"
+
+[ScreenSearch]
+Fallback="ScreenTextEntry"
+PlayMusic=false
+AllowRepeatingInput=true
+RepeatRate=24
+HighlightColor=color("0.25,0.8,1,1")
