Restore default options screen and debug layer tweaks

--- a/metrics.ini
+++ b/metrics.ini
@@ -137,20 +137,14 @@ CreditsJoinOnly=true
 CreditsP1OnCommand=visible,false
 CreditsP2OnCommand=visible,false
 
-[ScreenOptionsMaster]
-Speed="7;"
-SpeedDefault="mod,1x,no randomspeed"
-Speed,1="mod,m500;text,m500"
-Speed,2="mod,m550;text,m550"
-Speed,3="mod,m600;text,m600"
-Speed,4="mod,m650;text,m650"
-Speed,5="mod,m700;text,m700"
-Speed,6="mod,m750;text,m750"
-Speed,7="mod,m800;text,m800"
-
 [ScreenSearch]
 Fallback="ScreenTextEntry"
 PlayMusic=false
 AllowRepeatingInput=true
 RepeatRate=24
 HighlightColor=color("0.25,0.8,1,1")
+
+[ScreenDebugOverlay]
+ButtonTextOnCommand=NoStroke;zoom,0.5
+FunctionTextOnCommand=NoStroke;zoom,0.5
+LineSpacing=18
