Allow a second player to join during select music

--- a/metrics.ini
+++ b/metrics.ini
@@ -59,8 +59,8 @@ ChoiceExit="screen,ScreenExit;text,Exit"
 
 # from the greatest themer ever
 [freemTech2]
-Class="ScreenSelectMaster"
-Fallback="ScreenSelectMaster"
+#Class="ScreenSelectMaster"
+Fallback="ScreenWithMenuElements"
 AllowOperatorMenuButton=true
 AllowRepeatingInput=false
 AllowDisabledPlayerInput=true
@@ -96,6 +96,7 @@ RepeatRate=16
 [ScreenSelectMusicCustom]
 Fallback="ScreenCustomMenu"
 NextScreen="ScreenGameplay"
+AllowDisabledPlayerInput=true
 
 [ScreenEvaluationCustom]
 Fallback="ScreenCustomMenu"
@@ -134,8 +135,8 @@ LeadingZeroMultiplyColor=color("#444444BB")
 [ScreenSystemLayer]
 ShowCreditDisplay=false
 CreditsJoinOnly=true
-CreditsP1OnCommand=visible,false
-CreditsP2OnCommand=visible,false
+CreditsP1OnCommand=visible,true;halign,0
+CreditsP2OnCommand=visible,true;halign,1
 
 [ScreenSearch]
 Fallback="ScreenTextEntry"
