--- a/metrics.ini
+++ b/metrics.ini
@@ -145,6 +145,10 @@ AllowRepeatingInput=true
 RepeatRate=24
 HighlightColor=color("0.25,0.8,1,1")
 
+[ScreenEdit]
+InfoOnCommand=visible,false
+
+
 [ScreenDebugOverlay]
 ButtonTextOnCommand=NoStroke;zoom,0.5
 FunctionTextOnCommand=NoStroke;zoom,0.5
