--- a/Fonts/newrodin-b-24-resized/_fot-newrodin pro b 24px.ini
+++ b/Fonts/newrodin-b-24-resized/_fot-newrodin pro b 24px.ini
@@ -8,7 +8,7 @@ AdvanceExtraPixels=-1
 DefaultStrokeColor=#FFFFFF00
 
 [main]
-import=newrodin-b-24-jpn-resized/_fot-newrodin pro b 24px
+import=newrodin-b-24-jpn-resized/_fot-newrodin pro b 24px,_pump 20px
 
 [basic-latin]
 Line 0= !"#$%&'()*+,-./
